app/assets/stylesheets/home.css.scss
//= require font-awesome
$greyblue: #34444f;
$red: #CE6861;
$green: #60AB89;

a, a:hover {
  color: inherit;
  min-height: 50px;
  text-decoration: none;

}

.padded-container {
  padding: 0 5%;
}

.button-container {
  position: absolute;
  top: 0;
  right: 5%;
  .plus {
    margin-right: -15px;
    margin-top: -6px;
  }
}

.section {
  margin: 12px 0;
  padding: 0 5%;
}

.nav-bar {
  height: 50px;
  line-height: 100%;
  text-align: center;
  padding: 0 5%;
  border-bottom: 1px solid lightgrey;
  * {
    line-height: 50px;
  }
  .settings, .habits-link {
    float: left;
  }
  .new-habit, .edit, .logout {
    float: right;
  }
  h4 {
    display: inline-block;
    margin: 0 auto;
  }
  .title-lockup {
    display: inline-block;
    line-height: 13px;;
  }
  .title {
    margin-top: 14px;
  }
  .title, .sub-title {
    line-height: 13px;
  }
  .sub-title {
    font-size: 8px
  }
}

.habit-percentage {
  font-size: 80px;
}
#habits-list {
  margin: 0;
  padding: 0;
  .habit-listing {
    position: relative;
    font-size: 15px;
    list-style-type: none;
    margin: 0px;
    height: 50px;
    border-bottom: 1px solid lightgrey;
    line-height: 50px;
    padding: 0 5%;
    a {
      line-height: 100%;
      display: inline-block;
    }
    .value {
      margin-right: 10px;
      font-size: 25px;
      width: 40px;
      text-align: center;
      display: inline-block;
      position: relative;
      top: 4px;
    }

    .title {
      width: calc(100% - 50px);
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
      span {
        line-height: 40px;
      }
    }
  }
}

.checkin.list-group-item {
  min-height: 43px;
}

